[package]
name = "game_engine_2d"
version = "0.1.0"
authors = ["Yeonho Jang <siabard@gmail.com>"]
build="build.rs"

[features]
default = []
use_sdl2_mac_framework = ["sdl2/use_mac_framework"]

[dependencies]
uuid = { version = "0.6", features = ["v4"] }

[dependencies.sdl2]
version = "*"
default-features = false
features = ["use_mac_framework","image","ttf","mixer","gfx"]
